--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       />
       <button>Log in</button>
     </form>
+    <a href="https://github.com/Hellol77/momentum">go to github</a>
+    <h1 id="greeting"></h1>
     <script src="app.js"></script>
   </body>
 </html>
