--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>javascript</title>
   </head>
   <body>
-    <form id="login-form">
+    <form id="login-form" class="hidden">
       <input
         required
         maxlength="15"
@@ -18,7 +18,7 @@
       <button>Log in</button>
     </form>
     <a href="https://github.com/Hellol77/momentum">go to github</a>
-    <h1 id="greeting"></h1>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
   </body>
 </html>
