--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
       <button>Log in</button>
     </form>
     <a href="https://github.com/Hellol77/momentum">go to github</a>
-    <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock"></h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <script src="js/quotes.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
   </body>
