--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <span></span>
       <span></span>
     </div>
-    <script src="js/quotes.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src='js/background.js'></script>
   </body>
 </html>
