--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <a href="https://github.com/Hellol77/momentum">go to github</a>
     <h2 id="clock"></h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <ul id="todo-list"></ul>
+      <input type="text" placeholder="Write a to do and press" />
+    </form>
     <div id="quote">
       <span></span>
       <span></span>
@@ -27,6 +31,7 @@
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/quotes.js"></script>
-    <script src='js/background.js'></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
