--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <h2 id="clock"></h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-      <ul id="todo-list"></ul>
-      <input type="text" placeholder="Write a to do and press" />
+      <input type="text" placeholder="Write a to do and press Enter" required />
     </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
