--- a/index.html
+++ b/index.html
@@ -6,37 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>javascript</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <button>Log in</button>
-    </form>
     <a href="https://github.com/Hellol77/momentum">go to github</a>
-    <h2 id="clock"></h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a to do and press Enter" required />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
+    <div id="center">
+      <div>
+        <h2 id="clock"></h2>
+        <div id="weather">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <h1 id="greeting" class="hidden"></h1>
+      <form id="login-form" class="hidden">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        />
+        <button>Log in</button>
+      </form>
+      <form id="todo-form">
+        <input
+          type="text"
+          placeholder="Write a to do and press Enter"
+          required
+        />
+      </form>
+      <ul id="todo-list"></ul>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
     </div>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/font.js"></script>
+    <div id="bg">
+      <script src="js/background.js"></script>
+    </div>
     <script src="js/weather.js"></script>
   </body>
 </html>
